<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="241dp"
            android:layout_height="match_parent"
            android:background="#3F51B5"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="菜品" />

            <Button
                android:id="@+id/button02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string1" />

            <Button
                android:id="@+id/button03"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string2" />

            <Button
                android:id="@+id/button04"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string3" />

            <Button
                android:id="@+id/button05"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string4" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#2196F3"
            android:orientation="vertical"
            android:visibility="visible">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="数量" />

            <EditText
                android:id="@+id/editText2"
                android:layout_width="350px"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number" />

            <EditText
                android:id="@+id/editText3"
                android:layout_width="350px"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number" />

            <EditText
                android:id="@+id/editText4"
                android:layout_width="350px"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number" />

            <EditText
                android:id="@+id/editText5"
                android:layout_width="350px"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="224dp"
        android:layout_height="224dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/EditText02"
            android:layout_width="220px"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/Message_Send"
            android:inputType="number" />

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="540px"
            android:layout_height="wrap_content"
            android:text="@string/Message_Recv" />

        <Button
            android:id="@+id/Button01"
            android:layout_width="540px"
            android:layout_height="wrap_content"
            android:text="@string/Send" />

        <Button
            android:id="@+id/delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="取消" />

    </LinearLayout>

    <!--  <LinearLayout
          android:layout_width="225dp"
          android:layout_height="139dp"
          android:orientation="vertical">

          <EditText
              android:id="@+id/IP"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:hint="IP地址" />

          <Button
              android:id="@+id/confirm"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="确认" />
      </LinearLayout>

      <EditText
          android:id="@+id/EditText01"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:hint="@string/Message_Send"></EditText>-->

</LinearLayout>





